--- a/readme-vars.yml
+++ b/readme-vars.yml
@@ -89,7 +89,7 @@ full_custom_readme: |
   # Redirect stderr to stdout.
   fdmove -c 2 1
 
-  # Wait until Xorg is running
+  # Wait until openbox is running
   if { s6-svwait -t 10000 -U /var/run/s6/services/openbox/ }
 
   # Drop privileges and set env
