re-styling dockerfiles to fit in with LSIO, fixing base image for aarch64, removing license, adding templated files

--- a/readme-vars.yml
+++ b/readme-vars.yml
@@ -106,4 +106,6 @@ full_custom_readme: |
     * Remmina
     * Microsoft Remote Deskotp Client
 
+  The following line is only in this repo for loop testing:
+  - { date: "01.01.50:", desc: "I am the release message for this internal repo." }
   {%- endraw %}
