--- a/readme-vars.yml
+++ b/readme-vars.yml
@@ -1,7 +1,7 @@
 ---
 
 # project information
-project_name: docker-baseimage-gui
+project_name: baseimage-gui
 
 full_custom_readme: |
   {% raw -%}
